--- a/templates/ssp-production/0/rancher-compose.yml
+++ b/templates/ssp-production/0/rancher-compose.yml
@@ -1,8 +1,41 @@
-version: '1'
-catalog:
-  name: "SSP Production"
-  version: "1.0-sspprod"
-  description: "SSP Production Cluster"
+.catalog:
+  name: "Consul"
+  description: "Secure Consul cluster"
+  version: "0.6-rancher1"
+  uuid: consul-0
+  questions:
+    - variable: ca_crt
+      label: "CA certificate"
+      type: "multiline"
+      required: true
+    - variable: consul1_key
+      label: "First consul key"
+      type: "multiline"
+      required: true
+    - variable: consul1_crt
+      label: "First consul certificate"
+      type: "multiline"
+      required: true
+    - variable: consul2_key
+      label: "Second consul key"
+      type: "multiline"
+      required: true
+    - variable: consul2_crt
+      label: "Second consul certificate"
+      type: "multiline"
+      required: true
+    - variable: consul3_key
+      label: "Third consul key"
+      type: "multiline"
+      required: true
+    - variable: consul3_crt
+      label: "Third consul certificate"
+      type: "multiline"
+      required: true
+    - variable: gossip_key
+      label: "Communication gossip key"
+      type: "multiline"
+      required: true
 ssp-haproxy:
   scale: 1
 ssp-postgres:
