--- a/templates/ssp-production/0/rancher-compose.yml
+++ b/templates/ssp-production/0/rancher-compose.yml
@@ -36,33 +36,21 @@
       label: "Communication gossip key"
       type: "multiline"
       required: true
-ssp-haproxy:
-  scale: 1
-ssp-postgres:
-  scale: 1
-ssp-rabbitmq:
-  scale: 1
-ssp-discovery:
-  scale: 1
-ssp-vault:
-  scale: 1
-ssp-notification:
-  scale: 1
-ssp-partner:
-  scale: 1
-ssp-auth:
-  scale: 1
-ssp-pim:
-  scale: 1
-ssp-order:
-  scale: 1
-ssp-payment:
-  scale: 1
-ssp-dta-adapter:
-  scale: 1
-ssp-portal:
-  scale: 1
-ssp-business-portal:
-  scale: 1
-ssp-vsm-admin:
-  scale: 1
+consul:
+  scale: 3
+  metadata:
+    ca.crt: |
+            ${ca_crt}
+    consul1.crt: |
+            ${consul1_crt}
+    consul1.key: |
+            ${consul1_key}
+    consul2.crt: |
+            ${consul2_crt}
+    consul2.key: |
+            ${consul2_key}
+    consul3.crt: |
+            ${consul3_crt}
+    consul3.key: |
+            ${consul3_key}
+    enc.key: "${gossip_key}"
