--- a/templates/SSPProd/0/rancher-compose.yml
+++ b/templates/SSPProd/0/rancher-compose.yml
@@ -1,8 +1,8 @@
 .catalog:
-  name: "MongoDB"
+  name: "Sales Platform Production"
   version: "3.0.0-rancher1"
-  description: "MongoDB Replica Set"
-  uuid: mongodb-0
+  description: "Platform Production Cluster"
+  uuid: sspprod-0
   minimum_rancher_version: v0.46.0
   questions:
     - variable: replset_name
@@ -11,10 +11,33 @@
       type: "string"
       required: true
       default: "rs0"
-mongo-cluster:
-  scale: 3
-  retain_ip: true
-  metadata:
-    mongo:
-      yml:
-        replset.name: "${replset_name}"
+ssp-haproxy:
+  scale: 1
+ssp-postgres:
+  scale: 1
+ssp-rabbitmq:
+  scale: 1
+ssp-discovery:
+  scale: 1
+ssp-vault:
+  scale: 1
+ssp-notification:
+  scale: 1
+ssp-partner:
+  scale: 1
+ssp-auth:
+  scale: 1
+ssp-pim:
+  scale: 1
+ssp-order:
+  scale: 1
+ssp-payment:
+  scale: 1
+ssp-dta-adapter:
+  scale: 1
+ssp-portal:
+  scale: 1
+ssp-business-portal:
+  scale: 1
+ssp-vsm-admin:
+  scale: 1
