--- a/templates/SSPProd/config.yml
+++ b/templates/SSPProd/config.yml
@@ -1,5 +1,5 @@
 name: SSP Production
 description: |
-  SSP cluster for production environment.
-version: 3.2-rancher1
+  Microservices cluster for SSP production environment.
+version: sspprod-0.1
 category: Enterprise Portal
