--- a/templates/SSPDev/1/docker-compose.yml
+++ b/templates/SSPDev/1/docker-compose.yml
@@ -194,7 +194,7 @@ services:
         mem_limit: 512m
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-        ports:
+        expose:
             - 80:80
             - 443:443
         links:
