--- a/templates/SSP/0/docker-compose.yml
+++ b/templates/SSP/0/docker-compose.yml
@@ -1,207 +1,161 @@
-version: "2"
-# Service for SSP
-services:
-    # Postgresql container
-    ssp-postgresql:
-        image: docker.skidata.net/ssp-postgresql:0.2
-        ports:
-            - 5432:5432
-        volumes:
-            - db_data:/var/lib/postgres
-        environment:
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: postgres
-            PGPASSWORD: postgres
-        restart: always
-    # RabbitMQ container
-    ssp-rabbitmq:
-        image: docker.skidata.net/ssp-rabbitmq:0.2
-        ports:
-            - 15672:15672
-            - 5672:5672
-        environment:
-            RABBITMQ_PASS: admin
-    # Discovery container
-    ssp-discovery:
-        image: docker.skidata.net/ssp-discovery
-        mem_limit: 1024m
-        ports:
-            - 8761:8761
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-    # Auth container
-    ssp-auth:
-        image: docker.skidata.net/ssp-auth
-        mem_limit: 1024m
-        ports:
-            - 9999:9999
-        links:
-            - ssp-postgresql:ssp-postgresql
-            - ssp-rabbitmq:ssp-rabbitmq
-            - ssp-discovery:ssp-discovery
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-            VIRTUAL_HOST: "*/auth, */auth/*"
-    # Product container
-    ssp-pim:
-        image: docker.skidata.net/ssp-pim
-        mem_limit: 1024m
-        ports:
-            - 31020:31020
-        links:
-            - ssp-auth:ssp-auth
-            - ssp-rabbitmq:ssp-rabbitmq
-            - ssp-discovery:ssp-discovery
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-    # Gateway container
-    ssp-gateway:
-        image: docker.skidata.net/ssp-gateway
-        mem_limit: 1024m
-        ports:
-            - 8080:8080
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-auth:ssp-auth
-            - ssp-pim:ssp-pim
-            - ssp-partner:ssp-partner
-            - ssp-notification:ssp-notification
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-            VIRTUAL_HOST: "*/*"
-    # Portal container
-    ssp-portal:
-        image: docker.skidata.net/ssp-portal
-        mem_limit: 1024m
-        ports:
-            - 10000:10000
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-gateway:ssp-gateway
-            - ssp-auth:ssp-auth
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            HOST_IP: "$DOCKER_IP"
-            SSP_HOSTNAME: "$SSP_HOSTNAME"
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-            VIRTUAL_HOST: "*/portal, */portal/*"
-    #Partner container
-    ssp-partner:
-        image: docker.skidata.net/ssp-partner
-        mem_limit: 1024m
-        ports:
-            - 31010:31010
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-rabbitmq:ssp-rabbitmq
-            - ssp-auth:ssp-auth
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-    #Notification container
-    ssp-notification:
-        image: docker.skidata.net/ssp-notification
-        mem_limit: 1024m
-        ports:
-            - 30020:30020
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-rabbitmq:ssp-rabbitmq
-            - ssp-auth:ssp-auth
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-    #Vault-Container
-    ssp-vault:
-        image: docker.skidata.net/ssp-vault
-        mem_limit: 1024m
-        ports:
-            - 30010:30010
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-rabbitmq:ssp-rabbitmq
-            - ssp-auth:ssp-auth
-            - ssp-postgresql:ssp-postgresql
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-    #Dta-Adapter
-    ssp-dta-adapter:
-        image: docker.skidata.net/ssp-dta-adapter
-        mem_limit: 1024m
-        ports:
-            - 40010:40010
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-rabbitmq:ssp-rabbitmq
-            - ssp-postgresql:ssp-postgresql
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-    #Admin Portal container
-    ssp-vsm-admin:
-        image: docker.skidata.net/ssp-vsm-admin
-        mem_limit: 1024m
-        ports:
-            - 20000:20000
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-gateway:ssp-gateway
-            - ssp-auth:ssp-auth
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            HOST_IP: "$DOCKER_IP"
-            SSP_HOSTNAME: "$SSP_HOSTNAME"
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-            VIRTUAL_HOST: "*/admin, */admin/*"
-    # Order container
-    ssp-order:
-        image: docker.skidata.net/ssp-order
-        mem_limit: 1024m
-        ports:
-            - 32010:32010
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-gateway:ssp-gateway
-            - ssp-auth:ssp-auth
-            - ssp-partner:ssp-partner
-            - ssp-pim:ssp-pim
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-    #Payment container
-    ssp-payment:
-        image: docker.skidata.net/ssp-payment
-        mem_limit: 1024m
-        ports:
-            - 32020:32020
-        links:
-            - ssp-discovery:ssp-discovery
-            - ssp-gateway:ssp-gateway
-            - ssp-auth:ssp-auth
-        environment:
-            SPRING_PROFILES_ACTIVE: docker
-            HOST_IP: "$DOCKER_IP"
-            SSP_HOSTNAME: "$SSP_HOSTNAME"
-            JAVA_OPTS: "-Xmx512m -Xss256k"
-    # HA Proxy
-    ssp-haproxy:
-        image: dockercloud/haproxy
-        mem_limit: 512m
-        volumes:
-            - /var/run/docker.sock:/var/run/docker.sock
-        ports:
-            - 80:80
-            - 443:443
-        links:
-            - ssp-gateway:ssp-gateway
-            - ssp-auth:ssp-auth
-            - ssp-portal:ssp-portal
-            - ssp-vsm-admin:ssp-vsm-admin
-# Persistent volumes for SSP
+version: '2'
 volumes:
-  db_data:
+  db_data: {}
+services:
+  ssp-vault:
+    image: swblr.skidata.net/ssp-vault:0.6.2-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    links:
+    - ssp-auth:ssp-auth
+    - ssp-rabbitmq:ssp-rabbitmq
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    expose:
+    - '30010'
+  ssp-portal:
+    image: swblr.skidata.net/ssp-portal:0.6.10-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      SSP_HOSTNAME: "$SSP_HOSTNAME"
+      VIRTUAL_HOST: '*/portal, */portal/*'
+    links:
+    - ssp-auth:ssp-auth
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    - ssp-gateway:ssp-gateway
+    expose:
+    - '10000'
+  ssp-notification:
+    image: swblr.skidata.net/ssp-notification:0.6.3-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    links:
+    - ssp-auth:ssp-auth
+    - ssp-rabbitmq:ssp-rabbitmq
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    expose:
+    - '30020'
+  ssp-order:
+    image: swblr.skidata.net/ssp-order:0.6.3-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    links:
+    - ssp-auth:ssp-auth
+    - ssp-rabbitmq:ssp-rabbitmq
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    - ssp-pim:ssp-pim
+    - ssp-partner:ssp-partner
+    expose:
+    - '32010'
+  ssp-discovery:
+    image: swblr.skidata.net/ssp-discovery:0.6.3-SNAPSHOT
+    environment:
+      JAVA_OPTS: -Xmx512m -Xss256k
+      SPRING_PROFILES_ACTIVE: docker
+    expose:
+    - '8761'
+  ssp-lb:
+    image: rancher/lb-service-haproxy:v0.7.9
+    ports:
+    - 80:80/tcp
+    labels:
+      io.rancher.container.agent.role: environmentAdmin
+      io.rancher.container.create_agent: 'true'
+      io.rancher.scheduler.global: 'true'
+  ssp-partner:
+    image: swblr.skidata.net/ssp-partner:0.6.3-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    links:
+    - ssp-auth:ssp-auth
+    - ssp-rabbitmq:ssp-rabbitmq
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    expose:
+    - '31010'
+  ssp-vsm-adapter:
+    image: swblr.skidata.net/ssp-vsm-adapter:0.0.1-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    links:
+    - ssp-rabbitmq:ssp-rabbitmq
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    expose:
+    - '40030'
+  ssp-postgresql:
+    image: swblr.skidata.net/ssp-postgresql:0.3
+    environment:
+      PGPASSWORD: postgres
+      POSTGRES_PASSWORD: postgres
+    volumes:
+    - db_data:/var/lib/postgres
+    expose:
+    - '5432'
+  ssp-vsm-admin:
+    image: swblr.skidata.net/ssp-vsm-admin:0.6.3
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      SSP_HOSTNAME: "$SSP_HOSTNAME"
+      VIRTUAL_HOST: '*/ssp-vsm-admin, */ssp-vsm-admin/*'
+    links:
+    - ssp-auth:ssp-auth
+    - ssp-discovery:ssp-discovery
+    - ssp-gateway:ssp-gateway
+    expose:
+    - '20000'
+  ssp-rabbitmq:
+    image: tutum/rabbitmq
+    environment:
+      RABBITMQ_PASS: admin
+    expose:
+    - '5672'
+    - '15672'
+  ssp-dta-adapter:
+    image: swblr.skidata.net/ssp-dta-adapter:0.6.3-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    links:
+    - ssp-rabbitmq:ssp-rabbitmq
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    expose:
+    - '40010'
+  ssp-pim:
+    image: swblr.skidata.net/ssp-pim:0.6.3-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    links:
+    - ssp-auth:ssp-auth
+    - ssp-rabbitmq:ssp-rabbitmq
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    expose:
+    - '31020'
+  ssp-gateway:
+    image: swblr.skidata.net/ssp-gateway:0.6.4-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      VIRTUAL_HOST: '*/*'
+    links:
+    - ssp-auth:ssp-auth
+    - ssp-discovery:ssp-discovery
+    - ssp-pim:ssp-pim
+    - ssp-notification:ssp-notification
+    - ssp-partner:ssp-partner
+    expose:
+    - '8080'
+  ssp-auth:
+    image: swblr.skidata.net/ssp-auth:0.6.5-SNAPSHOT
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      VIRTUAL_HOST: '*/auth, */auth/*'
+    links:
+    - ssp-rabbitmq:ssp-rabbitmq
+    - ssp-postgresql:ssp-postgresql
+    - ssp-discovery:ssp-discovery
+    expose:
+    - '9999'
