--- a/templates/SSP/0/docker-compose.yml
+++ b/templates/SSP/0/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     expose:
     - '30010'
   ssp-portal:
-    image: swblr.skidata.net/ssp-portal:0.6.3-SNAPSHOT
+    image: swblr.skidata.net/ssp-portal:0.6.4
     environment:
       SPRING_PROFILES_ACTIVE: docker
       SSP_HOSTNAME: "$SSP_HOSTNAME"
